# mpc_motion_control_projects

./: README.md
mpc_ws/.cache/clangd/index/: control_allocator_node.cpp.448F08253351907E.idx  mpc_controller_node.cpp.84CDB81B24B87C61.idx  pid_controller_node.cpp.3C470107BD15BA55.idx  scenario_generator_node.cpp.A94FB7A13C43D371.idx  vehicle_interface_node.cpp.6FE7D90E95E24D69.idx  vehicle_model_node.cpp.8D8E90651D15C4B1.idx  visualization_node.cpp.C418FEEBDA92CDB4.idx
mpc_ws/install/: local_setup.sh  setup.sh
mpc_ws/install/mpc_car_control/include/mpc_car_control/mpc_car_control/msg/: actuator_command.hpp  control_command_body.h  reference_trajectory.h  reference_trajectory.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  vehicle_state.h  vehicle_state.hpp  wheel_ground_heights.h  wheel_ground_heights.hpp
mpc_ws/install/mpc_car_control/include/mpc_car_control/mpc_car_control/msg/detail/: actuator_command__builder.hpp  (+21 more)
mpc_ws/install/mpc_car_control/include/mpc_car_control/msg/: actuator_command.h  control_command_body.h  control_command_body.hpp  reference_trajectory.h  reference_trajectory.hpp  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  wheel_ground_heights.hpp
mpc_ws/install/mpc_car_control/include/mpc_car_control/msg/detail/: actuator_command__builder.hpp  actuator_command__functions.c  actuator_command__rosidl_typesupport_introspection_c.h  actuator_command__rosidl_typesupport_introspection_cpp.hpp  actuator_command__struct.h  actuator_command__struct.hpp  actuator_command__traits.hpp  actuator_command__type_support.c  actuator_command__type_support.cpp  actuator_command__type_support.h  actuator_command__type_support.hpp  control_command_body__functions.c  control_command_body__functions.h  control_command_body__rosidl_typesupport_fastrtps_c.h  control_command_body__rosidl_typesupport_fastrtps_cpp.hpp  control_command_body__rosidl_typesupport_introspection_cpp.hpp  control_command_body__struct.h  control_command_body__struct.hpp  control_command_body__traits.hpp  control_command_body__type_support.c  control_command_body__type_support.cpp  control_command_body__type_support.h  control_command_body__type_support.hpp  reference_trajectory__rosidl_typesupport_fastrtps_c.h  reference_trajectory__rosidl_typesupport_fastrtps_cpp.hpp  reference_trajectory__rosidl_typesupport_introspection_c.h  reference_trajectory__struct.h  reference_trajectory__struct.hpp  reference_trajectory__type_support.c  vehicle_state__builder.hpp  vehicle_state__functions.h  vehicle_state__rosidl_typesupport_fastrtps_c.h  vehicle_state__rosidl_typesupport_fastrtps_cpp.hpp  vehicle_state__rosidl_typesupport_introspection_c.h  vehicle_state__rosidl_typesupport_introspection_cpp.hpp  vehicle_state__struct.h  vehicle_state__type_support.cpp  vehicle_state__type_support.h  vehicle_state__type_support.hpp  wheel_ground_heights__builder.hpp  (+7 more)
mpc_ws/install/mpc_car_control/lib/mpc_car_control/: az_plotter.py  control_allocator_node  mpc_controller_node  pid_controller_node  scenario_generator_node  vehicle_interface_node  vehicle_model_node  visualization_node
mpc_ws/install/mpc_car_control/share/ament_index/resource_index/package_run_dependencies/: mpc_car_control
mpc_ws/install/mpc_car_control/share/ament_index/resource_index/parent_prefix_path/: mpc_car_control
mpc_ws/install/mpc_car_control/share/ament_index/resource_index/rosidl_interfaces/: mpc_car_control
mpc_ws/install/mpc_car_control/share/mpc_car_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
mpc_ws/install/mpc_car_control/share/mpc_car_control/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_mpc_car_control__rosidl_generator_cppExport.cmake  export_mpc_car_control__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_mpc_car_control__rosidl_typesupport_fastrtps_cExport.cmake  export_mpc_car_control__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  mpc_car_controlConfig-version.cmake  mpc_car_controlConfig.cmake  mpc_car_control__rosidl_generator_cExport.cmake  mpc_car_control__rosidl_generator_cppExport.cmake  mpc_car_control__rosidl_typesupport_introspection_cExport-noconfig.cmake  mpc_car_control__rosidl_typesupport_introspection_cExport.cmake  mpc_car_control__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
mpc_ws/install/mpc_car_control/share/mpc_car_control/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
mpc_ws/install/mpc_car_control/share/mpc_car_control/launch/: default.rviz  mpc_system.launch.py
mpc_ws/install/mpc_car_control/share/mpc_car_control/msg/: ActuatorCommand.idl  ActuatorCommand.json  ActuatorCommand.msg  ControlCommandBody.idl  ControlCommandBody.json  ControlCommandBody.msg  ReferenceTrajectory.idl  ReferenceTrajectory.json  ReferenceTrajectory.msg  VehicleState.idl  VehicleState.json  VehicleState.msg  WheelGroundHeights.idl  WheelGroundHeights.json  WheelGroundHeights.msg
mpc_ws/log/: latest_build
mpc_ws/src/mpc_car_control/: CMakeLists.txt  package.xml
mpc_ws/src/mpc_car_control/launch/: default.rviz  mpc_system.launch.py
mpc_ws/src/mpc_car_control/msg/: ActuatorCommand.msg  ReferenceTrajectory.msg  VehicleState.msg  WheelGroundHeights.msg
mpc_ws/src/mpc_car_control/src/: control_allocator_node.cpp  keyboard_listener_node.py  mpc_controller_node.cpp  pid_controller_node.cpp  scenario_generator_node.cpp  vehicle_interface_node.cpp  vehicle_model_node.cpp  visualization_node.cpp
mpc_ws/src/mpc_car_control/viz/: az_plotter.py
